--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-django==4.1.4
+django==4.1.5
 social-auth-app-django==5.0.0
 rosbags==0.9.13
 jsonschema==4.17.3
 python-dotenv==0.21.0
+gunicorn==20.1.0
