--- a/deployment/deploy.yml
+++ b/deployment/deploy.yml
@@ -6,6 +6,7 @@
       synchronize:
         src: "{{ item }}"
         dest: ~/rosbagBrowser/
+        delete: true
       with_items:
         - ../landingpage
         - ../rosbagBrowser
@@ -14,6 +15,19 @@
         - ../manage.py
         - ../README.md
         - ../requirements.txt
+    - name: Deploy secrets
+      template:
+        src: .env.j2
+        dest: ~/rosbagBrowser/.env
+    - name: Install dependencies
+      become: true
+      apt:
+        name:
+          - python3-virtualenv
+          - nginx
+        update_cache: true
+        state: latest
+
     - name: Update venv
       pip:
         virtualenv: ~/rosbagBrowser/.venv-deployment
@@ -21,25 +35,30 @@
 
     # Gunicorn systemd
     - name: Deploy gunicorn systemd socket
+      become: true
       copy:
         src: gunicorn.socket
         dest: /etc/systemd/system/
     - name: Deploy gunicorn systemd service
+      become: true
       copy:
         src: gunicorn.socket
         dest: /etc/systemd/system/
 
     # Nginx config
     - name: Deploy nginx config
-      copy:
-        src: nginx_config
+      become: true
+      template:
+        src: nginx_config.j2
         dest: /etc/nginx/sites-available/rosbagBrowser
     - name: Enable rosbagBrowser site for nginx
+      become: true
       file:
         path: /etc/nginx/sites-enabled/rosbagBrowser
         src: /etc/nginx/sites-available/rosbagBrowser
         state: link
     - name: Ensure default nginx site is not enabled
+      become: true
       file:
         path: /etc/nginx/sites-enabled/default
         state: absent
@@ -47,6 +66,7 @@
       become: true
       command: nginx -t
     - name: Enable/Start nginx service
+      become: true
       systemd:
         name: nginx
         state: restarted
@@ -57,8 +77,8 @@
       shell:
         chdir: ~/rosbagBrowser
         cmd: |
-          source .venv-deployment/bin/activate
-          python manage.py migrate
+          . .venv-deployment/bin/activate
+          python3 manage.py migrate
     # TODO: Ensure STATIC_ROOT exists? Does collectstatic do that?
     - name: generate static files
       shell:
@@ -66,12 +86,10 @@
         cmd: |
           source .venv-deployment/bin/activate
           python manage.py collectstatic
-    - name: fix static file permissions
-      debug:
-        msg: TODO
 
     # (Re)start gunicorn
     - name: Start gunicorn
+      become: true
       systemd:
         name: gunicorn
         state: restarted
